--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -11,7 +11,11 @@ body {
     color: $font-color-main;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    -moz-osx-font-smoothing: grayscale;    
+}
+
+#root {
+    min-height: 100vh;
 }
 
 h1,
@@ -20,10 +24,23 @@ h2 {
     padding: 50px 0;
 }
 
-.main-container {
-    max-width: 960px;
+.body-container {
+    max-width: 960px;    
     margin: 0 auto;
     background-color: $bg-color-inner;
     border-left: 1px solid $border-color-main;
     border-right: 1px solid $border-color-main;
+
+    &_main {
+        min-height: 80vh;
+    }
+
+    &_header {
+        min-height: 10vh;
+    }
+
+    &_footer {
+        min-height: 10vh;
+    }
 }
+
